<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/home">

    <fragment
        android:id="@+id/home"
        android:name="com.example.susupay.Navbottom.FragmentHome"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/home_transaction_id"
            app:destination="@id/transaction" />
    </fragment>
    <fragment
        android:id="@+id/transaction"
        android:name="com.example.susupay.Navbottom.FragmentTransaction"
        android:label="@string/transaction"
        tools:layout="@layout/fragment_transaction" >

        <action
            android:id="@+id/transaction_profile"
            app:destination="@id/profile" />
    </fragment>
    <fragment
        android:id="@+id/profile"
        android:name="com.example.susupay.Navbottom.FragmentProfile"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/transaction_profile"
            app:destination="@id/profile" />
    </fragment>
</navigation>