<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_ellipse"
    tools:context=".VerifyNumber">
    <LinearLayout
        android:id="@+id/profile_l_out1"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="90dp"
            android:clickable="true"
            android:contentDescription="@string/bank_image"
            android:focusable="true"
            android:src="@drawable/arrow_back" />

        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="140dp"
            android:text="@string/password_reset"
            android:textColor="@color/opt_color"
            android:textSize="@dimen/textView_fontSize" />
    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:layout_marginTop="50dp"
        android:layout_width="381dp"
        android:layout_height="265dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.089">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:padding="@dimen/common_padding"
                android:text="@string/phone_number"
                android:textColor="@color/opt_color"
                android:textSize="@dimen/textView_fontSize"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="132dp" />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="@dimen/common_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirm_new_password_reset_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@color/white"
                    android:inputType="number"
                    android:hint="@string/confirm_new_password" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button2"
                android:layout_width="309dp"
                android:layout_height="65dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/next" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>