<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_ellipse"
    tools:context=".Activities.Profile">
    <LinearLayout
        android:id="@+id/profile_l_out1"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="110dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="110dp"
            android:text="@string/title_profile"
            android:textColor="@color/opt_color"
            android:textSize="@dimen/textView_fontSize" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/edit" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/card_view_layout_id"
        android:layout_width="415dp"
        android:layout_height="79dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_l_out1"
        app:layout_constraintVertical_bias="0.059">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="@dimen/common_margin"
            android:background="@color/opt_color"
            android:elevation="5dp"
            app:cardBackgroundColor="@color/opt_color"
            app:cardElevation="2dp">

            <ImageView
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/common_margin"
                android:paddingLeft="@dimen/common_padding"
                android:src="@drawable/profile_pic" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textColor="@color/text_colors"
                    android:textSize="@dimen/textView_fontSize" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_email"
                    android:textColor="@color/white" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view_layout_id"
        app:layout_constraintVertical_bias="0.021"
        app:tabMode="fixed">
        <com.google.android.material.tabs.TabItem
            android:id="@+id/setting_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_profile" />
        <com.google.android.material.tabs.TabItem
            android:id="@+id/profile_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings" />
    </com.google.android.material.tabs.TabLayout>

</androidx.constraintlayout.widget.ConstraintLayout>